<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HealthyU</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unit_lbs" translatable="false">lbs</string>
    <string name="unit_kg" translatable="false">kg</string>
    <string name="unit_in" translatable="false">in</string>
    <string name="unit_cm" translatable="false">cm</string>
    <string name="unit_kcal" translatable="false">kcal</string>
    <string name="unit_ft" translatable="false">ft</string>
    <string name="unit_mi" translatable="false">mi</string>
    <string name="all_happy">Happy</string>
    <string name="all_register">Register</string>
    <string name="all_life">Life</string>
    <string name="all_name_app">Happy Life</string>
    <string name="all_activity_level">Activity Level</string>
    <string name="all_goal">Goal</string>
    <string name="home_title_bmi">Body Mass Index</string>
    <string name="home_title_calo">Daily Calories Required</string>
    <string name="home_title_health">Health Index</string>
    <string name="home_title_heart">Heart Rate</string>
    <string name="home_title_blood">Blood Pressure</string>
    <string name="home_title_oxy">Oxygen Saturation</string>
    <string name="home_title_respi">Respiraton Rate</string>
    <string name="register_personal_information">Personal Information</string>
    <string name="register_health_information">Health Information</string>
    <string name="register_activity_information">Activity Information</string>
    <string name="home">Home</string>
    <string name="bmi_other">Bmi Other</string>
    <string name="profile">Profile</string>
    <string name="registration">Registration</string>
    <string name="facebook_app_id" translatable="false">4440512069358516</string>
    <string name="default_notification_channel_id" translatable="false">fb_cm_wellbeing</string>
    <string name="unit_in_symbol" translatable="false">\"</string>
    <string name="all_well" translatable="false">Well</string>
    <string name="all_be" translatable="false">Be</string>
    <string name="setting_unit_metric" translatable="false">kg / cm / km</string>
    <string name="setting_unit_imperial" translatable="false">lbs / ft / mi</string>
    <string name="onboarding_unit_cm_per_kg" translatable="false">cm / kg</string>
    <string name="onboarding_unit_inch_per_lbs" translatable="false">inch / lbs</string>
    <string name="bmi_adult_type_1" translatable="false">15 - 16</string>
    <string name="bmi_adult_type_2" translatable="false">16 - 18.4</string>
    <string name="bmi_adult_type_3" translatable="false">18.5 - 24.9</string>
    <string name="bmi_adult_type_4" translatable="false">25 - 29.9</string>
    <string name="bmi_adult_type_5" translatable="false">30 - 34.9</string>
    <string name="bmi_adult_type_6" translatable="false">35 - 39.9</string>
    <string name="bmi_adult_type_7" translatable="false">>40</string>
    <string name="edit_profile_weight_lbs" translatable="false">%s lbs</string>
    <string name="edit_profile_weight_kg" translatable="false">%s kg</string>
    <string name="edit_profile_height_in" translatable="false">%1$d\'%2$d\"</string>
    <string name="edit_profile_height_cm" translatable="false">%s cm</string>
    <string name="bmi_child_type_1" translatable="false">&lt;3rd</string>
    <string name="bmi_child_type_2" translatable="false">3rd - 15th</string>
    <string name="bmi_child_type_3" translatable="false">15th - 85th</string>
    <string name="bmi_child_type_4" translatable="false">85th - 97th</string>
    <string name="bmi_child_type_5" translatable="false">>=97th</string>
    <string name="bmi_table_index_adult" translatable="false">BMI (kg/m2)</string>
    <string name="about_hyper_link" translatable="false"><a href="https://mywelltraining.com">https://mywelltraining.com</a></string>
    <string name="statistic_bmi_user" translatable="false">BMI %s</string>
    <string name="body_type_women_1" translatable="false">&lt;15%</string>
    <string name="body_type_women_2" translatable="false">15% - 18%</string>
    <string name="body_type_women_3" translatable="false">18% - 22%</string>
    <string name="body_type_women_4" translatable="false">22% - 30%</string>
    <string name="body_type_women_5" translatable="false">30% - 40%</string>
    <string name="body_type_women_6" translatable="false">> 40%</string>
    <string name="body_type_man_1" translatable="false">&lt;5%</string>
    <string name="body_type_man_2" translatable="false">5% - 8%</string>
    <string name="body_type_man_3" translatable="false">8% - 12%</string>
    <string name="body_type_man_4" translatable="false">12% - 20%</string>
    <string name="body_type_man_5" translatable="false">20% - 30%</string>
    <string name="body_type_man_6" translatable="false">> 30%</string>
    <string name="healthy_weight" translatable="false">@string/bmi_healthy_weight</string>
    <string name="onboarding_goal" translatable="false">@string/rpe_goad</string>
    <string name="onboarding_maintain" translatable="false">@string/home_title_maintain</string>
    <string name="setting_about_us" translatable="false">@string/about_us</string>
    <string name="bmi_obesity_des" translatable="false">@string/bmi_obesity</string>
    <string name="healthy_weight_toolbar" translatable="false">@string/home_healthy_weight</string>
    <string name="healthy_weight_status_1" translatable="false">@string/bmi_over_weight</string>
    <string name="healthy_weight_status_3" translatable="false">@string/bmi_under_weight</string>
    <string name="edit_profile_toolbar" translatable="false">@string/profile_edit</string>
    <string name="edit_index_toolbar" translatable="false">@string/all_edit</string>
    <string name="body_explanation_title_1" translatable="false">@string/body_type_1</string>
    <string name="body_explanation_title_2" translatable="false">@string/body_type_2</string>
    <string name="body_explanation_title_3" translatable="false">@string/body_type_3</string>
    <string name="body_explanation_title_4" translatable="false">@string/body_type_4</string>
    <string name="body_explanation_title_5" translatable="false">@string/body_type_5</string>
    <string name="body_explanation_title_6" translatable="false">@string/body_type_6</string>
    <string name="body_explanation_des_1" translatable="false">@string/body_type_des_1</string>
    <string name="body_explanation_des_2" translatable="false">@string/body_type_des_2</string>
    <string name="body_explanation_des_3" translatable="false">@string/body_type_des_3</string>
    <string name="body_explanation_des_4" translatable="false">@string/body_type_des_4</string>
    <string name="body_explanation_des_5" translatable="false">@string/body_type_des_5</string>
    <string name="body_explanation_des_6" translatable="false">@string/body_type_des_6</string>
    <string name="transformation_edit_weight" translatable="false">@string/addweight_edit_weight</string>
    <string name="transformation_add_weight" translatable="false">@string/addweight_title</string>
    <string name="share_via" translatable="false">@string/preview_share</string>
    <string name="all_days_ago">%d days ago</string>
    <string name="all_year_ago">%d year ago</string>
    <string name="all_years_ago">%d years ago</string>
    <string name="body_women">Woman (% Fat)</string>
    <string name="body_man">Man (% Fat)</string>
    <string name="transformation_days_decrease">%1$d days - Decrease %2$s%3$s</string>
    <string name="transformation_days_increase">%1$d days - Increase %2$s%3$s</string>
    <string name="transformation_days_not_data">%1$d days - Not enough data</string>
    <string name="notifi_sale_off">%s OFF</string>
    <string name="version_app">Version: %s</string>
    <string name="profile_bmi_user">BMI %s |</string>
    <string name="profile_des_billing">Don\'t let ads interrupt your experience</string>
    <string name="profile_rate_love_description">Please let us know your feeling! We\'d love to hear your feedback anytime.</string>
    <string name="rate_completed_description">We appreciate your rating \n We will improve better in the future</string>
    <string name="onboarding_let_go">Let\’s go</string>
    <string name="bmi_answer_child">BMI is based on weight and height, it is only an indicator of body fatness. After BMI is calculated for children and teens, it is expressed as a percentile. Percentiles express a child\’s BMI relative to other children.\n\nCheck BMI-for-age annually. Tracking growth patterns over time can help you make sure your child is achieving or maintaining a healthy weight.\n\nPlease keep in mind that this BMI  is not meant to serve as a source of clinical guidance and is not intended to be a substitute for professional medical advice.</string>
    <string name="bmi_visit_child"><![CDATA[This formula is derived from <html><font color="#0645AD"><a href="https://www.who.int/tools/growth-reference-data-for-5to19-years/indicators/bmi-for-age">WHO’s website</a></font></html>.]]></string>
    <string name="healthy_weight_answer">The Healthy weight is derived by using your height in the reverse of the BMI formula. \nThis is done for both the minimum and maximum value of the recommended BMI</string>
    <string name="healthy_weight_status_des_2">You are in the healthy weight gap. Maintain healthy habits to maintain a healthy weight</string>
    <string name="healthy_weight_status_des_1"><![CDATA[You need to <html><font color="#FF974B">lose %1$s %2$s</font></html> to reach goal. Don\'t wait anymore! Let\'s practice to achieve the goal.]]></string>
    <string name="healthy_weight_status_des_3"><![CDATA[You need to <html><font color="#68A5F8">gain %1$s %2$s</font></html> to reach goal.  Improve your nutrition to improve weight.]]></string>
    <string name="all_week">Week</string>
    <string name="all_weight">Weight</string>
    <string name="all_height">Height</string>
    <string name="all_birthday">Birthday</string>
    <string name="all_gender">Gender</string>
    <string name="all_firstname">First Name</string>
    <string name="all_goal_weight">Goal weight</string>
    <string name="all_name">Name</string>
    <string name="all_lastname">Last Name</string>
    <string name="all_setting">Setting</string>
    <string name="all_done">Done</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_save">Save</string>
    <string name="all_saved">Saved</string>
    <string name="all_close">Close</string>
    <string name="all_edit">Edit</string>
    <string name="all_you">You</string>
    <string name="all_change">Change</string>
    <string name="all_metric">Metric</string>
    <string name="all_imperial">Imperial</string>
    <string name="all_ok">OK</string>
    <string name="all_exit">Exit</string>
    <string name="all_came">Camera</string>
    <string name="all_gallery">Gallery</string>
    <string name="all_today">Today</string>
    <string name="setting_unit">Unit</string>
    <string name="setting_language">Language</string>
    <string name="setting_dark_mode">Dark mode</string>
    <string name="bmi_very_under_weight">Very underweight</string>
    <string name="bmi_under_weight">Underweight</string>
    <string name="bmi_healthy_weight">Healthy Weight</string>
    <string name="bmi_over_weight">Overweight</string>
    <string name="bmi_obesity">Obesity</string>
    <string name="bmi_table_name_child">Weight Categories Child</string>
    <string name="bmi_table_index_child">Percentile</string>
    <string name="healthy_weight_title">Your Healthy Weight</string>
    <string name="healthy_weight_des">Update your result</string>
    <string name="healthy_weight_question">What is Healthy weight?</string>
    <string name="extension">Extensions</string>
    <string name="reauthentication">Reauthentication</string>
    <string name="version">Version</string>
</resources>