<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_02">
        <com.jarvis.design_system.textview.CustomTextView
            android:id="@+id/tvTitleExtensions"
            style="@style/TitleLabel"
            android:text="@string/extension"
            android:textColor="@color/ink_5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/px16"
            android:background="@drawable/all_bg_border_8px_bg_1"
            android:orientation="vertical"
            android:id="@+id/llExten"
            android:paddingHorizontal="@dimen/px0.5"
            android:paddingVertical="@dimen/px4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleExtensions">

            <com.jarvis.design_system.item.JxListItem
                android:id="@+id/viewFaceId"
                style="@style/ListItem.SizeS"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px50"
                android:background="@color/bg_01"
                app:itemContentElement="onlyTitle"
                app:itemEndElement="textAndIcon"
                app:itemStartElement="display"
                app:itemStartIcon="@drawable/ic_authen"
                app:itemTitle="@string/reauthentication" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clDarkMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_01">

                <com.jarvis.design_system.item.JxListItem
                    android:id="@+id/viewDarkMode"
                    style="@style/ListItem.SizeS"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/px50"
                    app:itemContentElement="onlyTitle"
                    app:itemEndElement="textAndIcon"
                    app:itemEndText="Hệ Thống"
                    app:itemStartElement="display"
                    android:background="@color/bg_01"
                    app:itemStartIcon="@drawable/ic_darkmode"
                    app:itemTitle="@string/setting_dark_mode"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.jarvis.design_system.textview.CustomTextView
            android:id="@+id/tvTitleSetting"
            style="@style/TitleLabel"
            android:text="@string/all_setting"
            android:textColor="@color/ink_5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llExten" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/px16"
            android:background="@drawable/all_bg_border_8px_bg_1"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/px0.5"
            android:paddingVertical="@dimen/px4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleSetting">

            <com.jarvis.design_system.item.JxListItem
                android:id="@+id/viewLanguage"
                style="@style/ListItem.SizeS"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px50"
                android:background="@color/bg_01"
                app:itemContentElement="onlyTitle"
                app:itemEndElement="textAndIcon"
                app:itemEndIcon="@drawable/all_ic_arrow_right"
                app:itemEndText="English"
                app:itemStartElement="display"
                app:itemStartIcon="@drawable/setting_ic_language"
                app:itemTitle="@string/setting_language" />

            <View
                style="@style/Divider1PxInk100Horizontal"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/px16" />

            <com.jarvis.design_system.item.JxListItem
                android:id="@+id/viewUnit"
                style="@style/ListItem.SizeS"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px50"
                android:background="@color/bg_01"
                app:itemContentElement="onlyTitle"
                app:itemEndElement="textAndIcon"
                app:itemEndIcon="@drawable/all_ic_arrow_right"
                app:itemStartElement="display"
                app:itemStartIcon="@drawable/ic_unit"
                app:itemTitle="@string/setting_unit"
                tools:itemEndText="@string/setting_unit_metric" />

            <View
                style="@style/Divider1PxInk100Horizontal"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/px16" />


            <com.jarvis.design_system.item.JxListItem
                android:id="@+id/viewAbout"
                style="@style/ListItem.SizeS"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px50"
                android:background="@color/bg_01"
                app:itemContentElement="onlyTitle"
                app:itemEndElement="hide"
                app:itemStartElement="display"
                app:itemStartIcon="@drawable/setting_ic_aboutus"
                app:itemTitle="@string/setting_about_us" />
            <View
                android:id="@+id/line"
                style="@style/Divider1PxInk100Horizontal"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/px16" />

            <com.jarvis.design_system.item.JxListItem
                android:id="@+id/viewVersion"
                style="@style/ListItem.SizeS"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px50"
                android:background="@color/bg_01"
                app:itemContentElement="onlyTitle"
                app:itemEndElement="hide"
                app:itemEndText="1.0.0"
                app:itemStartElement="display"
                app:itemStartIcon="@drawable/setting_ic_aboutus"
                app:itemTitle="@string/version" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>