<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_02">

        <com.jarvis.design_system.toolbar.JxToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:toolbarBackIcon="@drawable/all_ic_back"
            app:toolbarHideDivider="false"
            app:toolbarTitle="@string/healthy_weight_toolbar"
            app:toolbarViewStyle="backTitle" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_01"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.jarvis.design_system.textview.CustomTextView
                android:id="@+id/tvTilte"
                style="@style/T16H24B"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/px16"
                android:layout_marginTop="@dimen/px16"
                android:text="@string/healthy_weight_title"
                android:textColor="@color/ink_5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tvEdit"
                app:layout_constraintTop_toTopOf="parent" />

            <com.jarvis.design_system.textview.CustomTextView
                android:id="@+id/tvDes"
                style="@style/T12H18R"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/healthy_weight_des"
                android:textColor="@color/ink_3"
                app:layout_constraintLeft_toLeftOf="@id/tvTilte"
                app:layout_constraintRight_toLeftOf="@+id/tvEdit"
                app:layout_constraintTop_toBottomOf="@id/tvTilte" />

            <com.jarvis.design_system.button.JxButton
                android:id="@+id/tvEdit"
                style="@style/ButtonPlain.Mini.SizeS.Style3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_edit"
                android:textColor="@color/pri_1"
                app:layout_constraintBottom_toBottomOf="@+id/tvDes"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTilte" />

            <com.jarvis.design_system.textview.CustomTextView
                android:id="@+id/tvWeight"
                style="@style/T46H56B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/px32"
                android:text="55-70"
                android:textColor="@color/ink_5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tvUnit"
                app:layout_constraintTop_toBottomOf="@id/tvDes" />

            <com.jarvis.design_system.textview.CustomTextView
                android:id="@+id/tvUnit"
                style="@style/T20H28M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unit_kg"
                android:textColor="@color/ink_3"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvWeight"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toRightOf="@+id/tvWeight"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDes" />

            <com.jarvis.design_system.textview.CustomTextView
                android:id="@+id/tvStatus"
                style="@style/T20H28M"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/px16"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textColor="@color/bmi_level2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWeight"
                tools:text="@string/setting_language" />

            <com.jarvis.design_system.textview.CustomTextView
                android:id="@+id/tvStatusDes"
                style="@style/T14H20R"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/px16"
                android:layout_marginTop="@dimen/px8"
                android:layout_marginBottom="@dimen/px16"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="3"
                android:textColor="@color/ink_5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvStatus"
                tools:text="@string/healthy_weight_status_des_1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            style="@style/Divider1PxMercuryHorizontal"
            android:layout_width="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clInfo" />

        <com.jarvis.design_system.textview.CustomTextView
            android:id="@+id/tvTitleQuestion"
            style="@style/T14H20R"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px16"
            android:layout_marginTop="@dimen/px16"
            android:text="@string/healthy_weight_question"
            android:textColor="@color/ink_5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clInfo" />

        <com.jarvis.design_system.textview.CustomTextView
            android:id="@+id/tvAnswer"
            style="@style/T14H20R"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px16"
            android:layout_marginTop="@dimen/px12"
            android:layout_marginEnd="@dimen/px16"
            android:text="@string/healthy_weight_answer"
            android:textColor="@color/ink_3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleQuestion" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>